--- a/style.css
+++ b/style.css
@@ -15,9 +15,24 @@ a {
     font-family: sans-serif;
     font-size: 3em;
     color: rgb(241, 84, 255);
-    border: 1px solid rgb(241, 84, 255);
-    padding: 1.5rem 2.5rem;
+    border: 0.1em solid rgb(241, 84, 255);
+    padding: 1rem 2.5rem;
     border-radius: .5rem;
-    box-shadow: 0 0 3rem .5rem rgb(241, 84, 255), inset 0 0 2rem 0.2rem rgb(241, 84, 255);
-
+    text-shadow: 0 0 1em rgb(241, 84, 255);
+    box-shadow: 0 0 3rem .3em rgb(241, 84, 255), inset 0 0 2rem 0.5rem rgb(241, 84, 255);
+    position: relative;
 }
+
+a::before {
+    pointer-events: none;
+    content: '';
+    position: absolute;
+    background-color: rgba(241 84 255);
+    transform: perspective(1em) rotateX(55deg) scale(1, 0.5);
+    top: 130%;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    filter: blur(1em);
+}
+
