--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ a {
     text-shadow: 0 0 1em rgb(241, 84, 255);
     box-shadow: 0 0 3rem .3em rgb(241, 84, 255), inset 0 0 2rem 0.5rem rgb(241, 84, 255);
     position: relative;
+    transition: 250ms;
 }
 
 a::before {
@@ -34,6 +35,7 @@ a::before {
     width: 100%;
     height: 100%;
     filter: blur(1em);
+    transition: 500ms linear;
 }
 
 a:focus,
@@ -44,5 +46,5 @@ a:hover {
 
 a:focus::before,
 a:hover::before {
-    opacity: 0.8;
+    opacity: 0.5;
 }
