--- a/style.css
+++ b/style.css
@@ -18,10 +18,8 @@ a {
     border: 0.1em solid rgb(241, 84, 255);
     padding: 1rem 2.5rem;
     border-radius: .5rem;
-    text-shadow: 0 0 1em rgb(241, 84, 255);
-    box-shadow: 0 0 3rem .3em rgb(241, 84, 255), inset 0 0 2rem 0.5rem rgb(241, 84, 255);
     position: relative;
-    transition: 250ms;
+    transition: 300ms ease-in;
 }
 
 a::before {
@@ -29,22 +27,23 @@ a::before {
     content: '';
     position: absolute;
     background-color: rgba(241 84 255);
-    transform: perspective(1em) rotateX(55deg) scale(1, 0.5);
+    transform: perspective(1em) rotateX(50deg) scale(1, 0.4);
     top: 130%;
     left: 0;
     width: 100%;
     height: 100%;
     filter: blur(1em);
-    transition: 500ms linear;
+    opacity: 0;
+    transition: 200ms linear;
 }
 
 a:focus,
 a:hover {
-    text-shadow: none;
-    box-shadow: 0 0 3rem .3em rgb(241, 84, 255);
+    text-shadow: 0 0 1em rgb(241, 84, 255);
+    box-shadow: 0 0 2rem .3em rgb(241, 84, 255), inset 0 0 2rem 0.5rem rgb(241, 84, 255);
 }
 
 a:focus::before,
 a:hover::before {
-    opacity: 0.5;
+    opacity: 1;
 }
